tests/invalid/circular_typedef.lang
module main

// TODO: need to fix
// typedef MyType MyType;

typedef A 123;

func main() {

}
